moved scrollbar styling to global to fix it not properly applying

--- a/src/app/components/sidebar/sidebar.component.css
+++ b/src/app/components/sidebar/sidebar.component.css
@@ -19,23 +19,6 @@
   padding-bottom: 1rem;
 }
 
-.panel::-webkit-scrollbar {
-  width: 8px;
-}
-
-.panel::-webkit-scrollbar-track {
-  background-color: var(--bg-main);
-}
-
-.panel::-webkit-scrollbar-thumb {
-  background-color: var(--btn-bg-hover);
-  border-radius: 4px;
-}
-
-.panel::-webkit-scrollbar-thumb:hover {
-  background-color: var(--btn-bg);
-}
-
 .brand {
   font-size: 1.4rem;
   font-weight: 700;
