--- a/src/styles.css
+++ b/src/styles.css
@@ -16,3 +16,20 @@
   --btn-text: #f5f5f5;
 
 }
+
+*::-webkit-scrollbar {
+  width: 8px;
+}
+
+*::-webkit-scrollbar-track {
+  background-color: var(--bg-main);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--btn-bg-hover);
+  border-radius: 8px;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: var(--btn-bg);
+}
